--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
