--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "flashcard server",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/app.ts",
+    "start": "node ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
