--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,11 @@
   "description": "flashcard server",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/app.ts",
+    "start": "nodemon -e ts --exec ts-node src/app",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "compilerOptions": {
+    "module": "CommonJS"
   },
   "author": "",
   "license": "ISC",
